2005-09-21  Sven Panne  <sven.panne@aedion.de>

	* src/alutLoader.c: Removed evil byte-swapping. Fixed WAV loading
	(still not 100% bullet-proof, I think). Cleanup.

	* admin/.indent.pro: Added new typedef.

	* src/alutInternal.h: Handle 32bit sized types on Windows.

2005-09-18  Sven Panne  <sven.panne@aedion.de>

	* src/alutInit.c, src/alutLoader.c: Added a few error checks. Made
	testing for errors more consistent, it should be of the form:

	   if (!<assertion>)
	     {
	       _alutSetError(<error>);
	       <cleanup>
	       return <whatever>;
	     }

	* admin/.indent.pro, examples/.cvsignore, examples/Makefile.am,
	src/alutLoader.c: Merged and heavily modified Erik Hofman's fixes
	for AU/WAV loaders. Some more cleanup + minor fixes.

	* examples/playfile.c: Added.

2005-09-17  Sven Panne  <sven.panne@aedion.de>

	* configure.ac, include/AL/alut.h, test_suite/Makefile.am: Flag
	deprecated functions if possible (VisualC++ .NET and GCC >=
	3.1.1), but be careful to avoid those warnings in our test suite.

	* admin/m4/alut_check_flag.m4, admin/m4/alut_eval_stderr.m4:
	Added.

	* configure.ac, admin/alut.vcproj, include/AL/alut.h: Use
	AL_ALUT_H instead of _AL_ALUT_H, macros starting with "_" are
	reserved by the C standard. For the same reason, rename _ALUTLIB
	to ALUT_BUILD_LIBRARY.

	* README: Added building instructions using VisualStudio.

	* admin/.cvsignore: Ignore files generated by VisualStudio.

	* AUTHORS: Added Erik Hofman. Small reformatting.

	* alut.sln, alut.vcproj, hello_world.vcproj: Added. I have access
	to VisualStudio .NET only, so I can't maintain project files for
	older versions. Note that the OpenAL SDK is assumed to live under
	C:\OpenALSDK, not nice to hardwire this, but I don't see another
	solution currently. Help would be appreciated.

	* alut.dsp, alut.dsw, hello_world.dsp: Removed.

	* configure.ac, src/alutInternal.h, src/alutLoader.c,
	src/alutWaveform.c: As usual, Microsoft chooses to ignore